moved to release version of Fluxtion. Reduce logging noise.